--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/swagger": "^11.0.3",
     "@types/multer": "^1.4.12",
     "@types/sequelize": "^4.28.20",
     "bcryptjs": "^3.0.0",
